--- a/stage1/task01/index.html
+++ b/stage1/task01/index.html
@@ -4,10 +4,9 @@
 	<meta charset="utf-8">
 	<meta http-equiv=X-UA-Compatible content="IE=edge,chrome=1">
 	<meta content=always name=referrer>
-	<title>XiaoBai-FE | 小白向前冲 (2016 IFE)</title>
+	<title>任务01-零基础HTML编码 | 小白向前冲 (2016 IFE)</title>
 </head>
 
 <body>
-<h1>XiaoBai-FE | 小白向前冲 (2016 IFE)</h1>
 </body>
 </html>
