添加点首页样式

--- a/index.html
+++ b/index.html
@@ -5,9 +5,38 @@
 	<meta http-equiv=X-UA-Compatible content="IE=edge,chrome=1">
 	<meta content=always name=referrer>
 	<title>XiaoBai-FE | 小白向前冲 (2016 IFE)</title>
+	<style>
+		*{
+			margin: 0;
+			padding: 0;
+		}
+		header{
+			width: 100%;
+			height:80px;
+			background: #337AB7;
+			line-height: 80px;
+		}
+		.text-center{
+			text-align: center;
+		}
+		.title{
+			color: #FFFFFF;
+			font-size: 28px;
+			text-decoration: none;
+		}
+		.coming{
+			text-align: center;
+			font-size: 36px;
+			margin-top: 20%;
+		}
+	</style>
 </head>
-
 <body>
-<h1>XiaoBai-FE | 小白向前冲 (2016 IFE)</h1>
+<header class="text-center">
+	<a class="title" href="http://xiaobaife.github.io" target="_blank">XiaoBai-FE | 小白向前冲 (2016 IFE)</a>
+</header>
+<div class="container">
+	<h2 class="coming">Coming Soon...</h2>
+</div>
 </body>
 </html>
